# db_data_dictionary

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: __init__.py  postgres.py
utils/: postgres.py
